src/revmywrf/slurm_outputs/effect_of_incl_rain_ss_qss_hist_v1.txt
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 101
    dsdsum_vars)):
                ^
SyntaxError: invalid syntax
/var/spool/slurmd/job26408464/slurm_script: line 2: 204478 Killed                  python $HOME/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py
slurmstepd: error: Detected 1 oom-kill event(s) in step 26408464.batch cgroup. Some of your processes may have been killed by the cgroup out-of-memory handler.
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 153, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 35, in main
    case_label_dict[case_label], boolean_param_tuples)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 66, in make_and_save_ss_qss_hist
    (lwc > lwc_filter_val), \
NameError: name 'lwc' is not defined
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
Polluted
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 152, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 35, in main
    case_label_dict[case_label], boolean_param_tuples)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/effect_of_incl_rain_ss_qss_hist_figsrc.py", line 84, in make_and_save_ss_qss_hist
    + ', full_ss=' + str(full_ss))
NameError: name 'cutoff_bins' is not defined
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
Polluted
Unpolluted
